<resources>
    <string name="app_name">E02Views</string>
    <string name="action_signUP">회원가입</string>
    <string name="action_memo">메모장</string>
    <string name="login" />
    <string name="loginId2">로그인 아이디</string>
    <string name="loginid">로그인아이디</string>
    <string name="loginId">로그인 아이디</string>
    <string name="input_loginId">로그인 아디를 입력하세요</string>
    <string name="password">비밀번호</string>
    <string name="password_input">비밀번호를 입력하세요</string>
    <string name="password2">비밀번호 확인</string>
    <string name="password_input2">비밀번호를 한번 더 입력하세요.</string>
    <string name="email">이메일 주소</string>
    <string name="email_input">이메일을 입력하세요</string>
    <string name="signUp">회원가입</string>
    <string name="refresh">새로고침</string>
    <string name="input_title">제목을 입력하세요</string>
    <string name="input_content">내용을 입력하세요</string>
    <string name="save">저장</string>
    <string name="action_button">버튼</string>
    <string name="autologin">자동로그인</string>
    <string name="red">빨간색</string>
    <string name="yellow">노란색</string>
    <string name="blue">파란색</string>

</resources>